--- a/cafe.html
+++ b/cafe.html
@@ -459,6 +459,8 @@ Error message and password prompt
 
 <li>crypto_service.ini</li>
 
+<li>Draft of 'Криптосервис - задачи' by zeid</li>
+
 <li>eclipse</li>
 
 <li>edoc</li>
@@ -504,6 +506,8 @@ Error message and password prompt
 <li>Python socket server</li>
 
 <li>Sigma-3</li>
+
+<li>src/apps/Zvezda/crypto_service/api</li>
 
 <li>task</li>
 
@@ -12093,14 +12097,14 @@ Error message and password prompt
 <div created="20210603083336622" modified="20210603083336622" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
 </div>
-<div created="20210601142236932" modified="20210831143010280" title="$:/state/tab/sidebar--595412856">
-<pre>$:/plugins/tiddlywiki/comments/sidebar</pre>
+<div created="20210601142236932" creator="zeid" modified="20210831143437840" modifier="zeid" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" modified="20210831142756640" title="$:/state/tab2--2017306950">
-<pre>zest</pre>
+<div created="20210826160606675" creator="zeid" modified="20210831143141591" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>спецификация</pre>
 </div>
 <div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12285,7 +12289,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="[[Zest Comment Styles]] Sigma-3 zeid todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143121303" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="$:/plugins/tiddlywiki/highlight [[Draft of 'Криптосервис - задачи' by zeid]] src/apps/Zvezda/crypto_service/api SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143745185" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12975,6 +12979,32 @@ api.admin_feedback_ports = localhost:10011, localhost:10012
 
 По IN - вызов функции, по OUT - прием ее параметров</pre>
 </div>
+<div created="20210831115833307" creator="zeid" draft.of="Криптосервис - задачи" draft.title="Криптосервис - задачи" modified="20210831143742453" modifier="zeid" tags="задачи Криптосервис" title="Draft of 'Криптосервис - задачи' by zeid">
+<pre>Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api]]. 
+Там есть: 
+
+* app_service.zdl 
+* app_feedback.zdl
+* radio_service.zdl
+* radio_feedback.zdl 
+
+Идентификаторы функций – это порядковый номер функций, начиная сверху. 
+
+Документы `doc/utils/rpc`: 
+
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;RPC technology.docx&lt;/a&gt;
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
+
+Основные функции:
+
+#	AppService.SendData
+#	AppFeedback.ReceiveData
+#	RadioService.ReceiveMsg
+#	RadioFeedback.SendMsg
+
+Этого набора функций достаточно, чтобы организовать взаимодействие между клиентом и сервером. Все остальные функции (в т.ч. сущности Notification) предлагаю пока что проигнорировать.
+</pre>
+</div>
 <div created="20210603091809182" modified="20210603091823534" tags="code" title="eclipse">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
@@ -13269,6 +13299,128 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 * 22.06 
 * 20.07 
 * 17.08</pre>
+</div>
+<div created="20210831143313296" creator="zeid" modified="20210831143752906" modifier="zeid" tags="zdl Криптосервис-zdl" title="src/apps/Zvezda/crypto_service/api">
+<pre>
+
+```markdown
+# API которое предоставляет криптосервис для приложения. Через данное API приложение обращается к клиентам.
+# Пользователем данного API является подсистема, обеспечивающая взаимодействие с приложением 
+# Для функционирования криптосервиса в составе криптосервера необходимо открыть соединение для обслуживания данного API.
+Api AppService
+
+Version = 1.8.0
+
+# Отправить данные клиенту с подтверждением доставки. Данные буферизуются криптосервисом до момента выхода клиента на связь 
+# (до синхронной сессии). Клиент, которому посылаются данные, должен быть активирован.
+# Как только от клиента придет подтверждение доставки данных, сервер отправляет уведомление о доставке (AppFeedback.DataStateChanged)
+# В случае передачи данных размером более MAX_DATA_SIZE  данные автоматически разделяются на порции размером не более MAX_DATA_SIZE 
+# и отправляются последовательно в режиме chaining. Функция возвращает ID задания. 
+# Этот параметр будет передаваться приложению в уведомлениях о статусе отправки данных (AppFeedback.DataStateChanged)
+Function PostData
+	In
+		client_id : U32		# ID клиента
+		downlink_data : Binary	# Данные для отправки
+		enc : Bool		# Требуется ли шифрование
+	End
+	Out
+		task_id : U32		# ID отложенного задания. Будет отправлен в уведомлении о доставке.
+	End
+	Error
+		CLIENT_NOT_EXIST = 1		# Клиент не зарегистрирован
+	End
+End
+
+# Отправка данных клиенту без подтверждения доставки. Данные отправляются незамедлительно.
+# В процессе обработки команды сервер отправляет команду RadioFeedback.ProcessDownlinkMessage.
+# При получении такой команды радиоподсистема должна инициировать отправку Crisp - сообщения клиенту.
+# Если клиент находятся в синхронной сессии, то функция завершится с ошибкой CLIENT_IN_SYNC. В этом случае у пользователя есть несколько вариантов:
+# 	- Переотправить через некоторое время, когда клиент завершит синхронную сессию
+#	- Отправкить сообщение через PostData. В этом случае оно будет отправлено после выполнения всех ранее добавленных отложенных заданий
+# Если длина сообщения превышает максимально возможную, то функция вернет ошибку INCORRECT_DATA_LEN.
+# В этом случае сообщение необходимо либо разбить на часть на уровне приложения, либо отправить функцией PostData, которая поддерживает
+# данные любой длины 
+Function SendData
+	In
+		client_id : U32		# ID клиента
+		downlink_data : Binary	# Данные для отправки
+		enc : Bool		# Требуется ли шифрование
+	End
+	Error
+		CLIENT_NOT_EXIST = 1		# Клиент не зарегистрирован
+		CLIENT_NOT_ACTIVATED = 2 	# Клиент не активирован
+		CLIENT_IN_SYNC = 3		# Клиент в сихронной сессии
+		INCORRECT_DATA_LEN = 4		# Длина данных превышает максимально возможную
+		ACCESS_DENIED = 100,		# Не выполнениы требования по безопасности
+		SM_ERROR = 101			# Ошибка модуля безопасности
+	End
+End
+
+# Получение сертификата от криптосервиса
+Function GetCertificate
+   	In
+   		server_key_id : U32 # ID ключа сервера (извлекается из сообщения AppFeedback.ReceiveData)
+	End
+	Out
+		cert : Binary # Сертификат в формате X.509
+	End
+	Error
+		KEY_NOT_FOUND = 1	# Ключ не найден
+		CERT_NOT_LOADED = 2	# Ключ существует, но сертификат на него не загружен
+	End
+End
+
+# Получение &quot;сырого&quot; открытого ключа от криптосервиса
+Function GetPublicKey
+   	In
+   		server_key_id : U32 # ID ключа сервера (извлекается из сообщения AppFeedback.ReceiveData)
+	End
+	Out
+		key_value : Binary # Сырое значение открытого ключа
+	End
+	Error
+		KEY_NOT_FOUND = 1	# Ключ не найден 
+	End
+End
+
+# Получение сертификата ключа клиента Kds.cc
+# В функцию должны быть переданы значения client_id, client_key_version, полученные из AppFeedback.ReceiveData.
+Function GetClientCertificate
+   	In
+   		client_id : U32 # ID клиента 
+		key_version : U32 # Версия ключа клиента. Значение по умолчанию 0 не допускается.
+	End
+	Out
+		cert : Binary # Сертификат в формате X.509
+	End
+	Error
+		KEY_NOT_FOUND = 1	# Ключ не найден (версия ключа отсутствует или клиент не зарегистрирован)
+		CERT_NOT_LOADED = 2	# Ключ существует, но сертификат на него не загружен
+	End
+End
+
+# Получение &quot;сырого&quot; открытого ключа клиента ds.cc определенной версии
+# В функцию должны быть переданы значения client_id, client_key_version, полученные из AppFeedback.ReceiveData.
+Function GetClientPublicKey
+   	In
+   		client_id : U32 # ID клиента 
+		key_version : U32 # Версия ключа клиента. Значение по умолчанию 0 не допускается.
+	End
+	Out
+		key_value : Binary # Сырое значение открытого ключа
+	End
+	Error
+		KEY_NOT_FOUND = 1	# Ключ не найден (версия ключа отсутствует или клиент не зарегистрирован)
+	End
+End
+
+
+End
+
+
+
+```
+</pre>
 </div>
 <div created="20210603084626198" modified="20210603084634278" tags="CodeCafe" title="task">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
