--- a/cafe.html
+++ b/cafe.html
@@ -415,6 +415,8 @@ Error message and password prompt
 
 <li>AppService</li>
 
+<li>bash</li>
+
 <li>Chandra - assembly</li>
 
 <li>checklist</li>
@@ -12319,7 +12321,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div list="[[Рекурсивная замена в названиях файлов]] Home" title="$:/StoryList">
+<div created="20210831180904215" creator="zeid" list="[[Рекурсивная замена в названиях файлов]] bash Home" modified="20210831180904215" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12748,6 +12750,9 @@ enum class Functions {
 [[app_service.zdl]]:
 
 {{app_service.zdl}}</pre>
+</div>
+<div created="20210831180908720" creator="zeid" modified="20210831180909790" modifier="zeid" tags="code" title="bash">
+<pre></pre>
 </div>
 <div created="20210601142528406" modified="20210607093530952" tags="разное" title="Chandra - assembly" type="">
 <pre>&lt;iframe src=&quot;https://daidalvi.github.io/moon/index.html&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
