--- a/cafe.html
+++ b/cafe.html
@@ -12126,8 +12126,8 @@ Error message and password prompt
 <div created="20210601142236932" creator="zeid" modified="20210831180757349" modifier="zeid" title="$:/state/tab/sidebar--595412856">
 <pre>CodeCafe</pre>
 </div>
-<div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
-<pre>java</pre>
+<div created="20210602141535668" creator="zeid" modified="20210831180915584" modifier="zeid" title="$:/state/tab2--1311305590">
+<pre>bash</pre>
 </div>
 <div created="20210826160606675" creator="zeid" modified="20210831180714702" modifier="zeid" title="$:/state/tab2--2017306950">
 <pre>projects</pre>
@@ -12141,8 +12141,8 @@ Error message and password prompt
 <div created="20210830101055416" modified="20210831134702005" title="$:/state/tab2-1422432489">
 <pre>python</pre>
 </div>
-<div created="20210602141529428" creator="zeid" modified="20210831180752906" modifier="zeid" title="$:/state/tab2-2058192071">
-<pre>projects</pre>
+<div created="20210602141529428" creator="zeid" modified="20210831180913736" modifier="zeid" title="$:/state/tab2-2058192071">
+<pre>code</pre>
 </div>
 <div created="20210603084225271" modified="20210831115831863" title="$:/state/tab2-678259293">
 <pre>Пак Звезда</pre>
@@ -12751,8 +12751,12 @@ enum class Functions {
 
 {{app_service.zdl}}</pre>
 </div>
-<div created="20210831180908720" creator="zeid" modified="20210831180909790" modifier="zeid" tags="code" title="bash">
-<pre></pre>
+<div created="20210831180908720" creator="zeid" modified="20210831180927015" modifier="zeid" tags="code" title="bash">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'bash'&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20210601142528406" modified="20210607093530952" tags="разное" title="Chandra - assembly" type="">
 <pre>&lt;iframe src=&quot;https://daidalvi.github.io/moon/index.html&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
