--- a/cafe.html
+++ b/cafe.html
@@ -353,11 +353,17 @@ Error message and password prompt
 
 <li>$:/state/toc/CodeCafe/задачи-LHD-RV-задачи--619712481</li>
 
+<li>$:/state/toc/eclipse-views--142022911</li>
+
+<li>$:/state/toc/eclipse/views-дизассемблер--142022911</li>
+
 <li>$:/state/toc/gdbcommand--data-disassemble-225017671</li>
 
 <li>$:/state/toc/info-спецификация-1433339656</li>
 
 <li>$:/state/toc/LHD-дизассемблер-1791797811</li>
+
+<li>$:/state/toc/linux-virtualbox--2032587087</li>
 
 <li>$:/state/toc/meri-Virtualbox - Lamp--2008402584</li>
 
@@ -366,6 +372,8 @@ Error message and password prompt
 <li>$:/state/toc/meri-virtualbox-190844615</li>
 
 <li>$:/state/toc/meri-задачи--2008402584</li>
+
+<li>$:/state/toc/programming-gdbcommand-628207791</li>
 
 <li>$:/state/toc/задачи-todo--141392297</li>
 
@@ -12126,8 +12134,8 @@ Error message and password prompt
 <div created="20210601142236932" creator="zeid" modified="20210831180757349" modifier="zeid" title="$:/state/tab/sidebar--595412856">
 <pre>CodeCafe</pre>
 </div>
-<div created="20210602141535668" creator="zeid" modified="20210831180915584" modifier="zeid" title="$:/state/tab2--1311305590">
-<pre>bash</pre>
+<div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
+<pre>php</pre>
 </div>
 <div created="20210826160606675" creator="zeid" modified="20210831180714702" modifier="zeid" title="$:/state/tab2--2017306950">
 <pre>projects</pre>
@@ -12141,8 +12149,8 @@ Error message and password prompt
 <div created="20210830101055416" modified="20210831134702005" title="$:/state/tab2-1422432489">
 <pre>python</pre>
 </div>
-<div created="20210602141529428" creator="zeid" modified="20210831180913736" modifier="zeid" title="$:/state/tab2-2058192071">
-<pre>code</pre>
+<div created="20210602141529428" creator="zeid" modified="20210831181009423" modifier="zeid" title="$:/state/tab2-2058192071">
+<pre>linux</pre>
 </div>
 <div created="20210603084225271" modified="20210831115831863" title="$:/state/tab2-678259293">
 <pre>Пак Звезда</pre>
@@ -12276,6 +12284,12 @@ Error message and password prompt
 <div created="20210601144247060" modified="20210601151753059" title="$:/state/toc/CodeCafe/задачи-LHD-RV-задачи--619712481">
 <pre>close</pre>
 </div>
+<div created="20210831180936173" creator="zeid" modified="20210831180936173" modifier="zeid" title="$:/state/toc/eclipse-views--142022911">
+<pre>open</pre>
+</div>
+<div created="20210831180937460" creator="zeid" modified="20210831180937460" modifier="zeid" title="$:/state/toc/eclipse/views-дизассемблер--142022911">
+<pre>open</pre>
+</div>
 <div created="20210603090923510" modified="20210603090924718" title="$:/state/toc/gdbcommand--data-disassemble-225017671">
 <pre>close</pre>
 </div>
@@ -12284,6 +12298,9 @@ Error message and password prompt
 </div>
 <div created="20210603092001797" modified="20210603092002999" title="$:/state/toc/LHD-дизассемблер-1791797811">
 <pre>close</pre>
+</div>
+<div created="20210831181030671" creator="zeid" modified="20210831181030671" modifier="zeid" title="$:/state/toc/linux-virtualbox--2032587087">
+<pre>open</pre>
 </div>
 <div created="20210826155057620" modified="20210826155057620" title="$:/state/toc/meri-Virtualbox - Lamp--2008402584">
 <pre>open</pre>
@@ -12296,6 +12313,9 @@ Error message and password prompt
 </div>
 <div created="20210831180524587" creator="zeid" modified="20210831180525443" modifier="zeid" title="$:/state/toc/meri-задачи--2008402584">
 <pre>close</pre>
+</div>
+<div created="20210831180953546" creator="zeid" modified="20210831180953546" modifier="zeid" title="$:/state/toc/programming-gdbcommand-628207791">
+<pre>open</pre>
 </div>
 <div created="20210603095354870" modified="20210603095354870" title="$:/state/toc/задачи-todo--141392297">
 <pre>open</pre>
@@ -12321,7 +12341,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831180904215" creator="zeid" list="[[Рекурсивная замена в названиях файлов]] bash Home" modified="20210831180904215" modifier="zeid" title="$:/StoryList">
+<div created="20210831181018423" creator="zeid" list="Home [[Virtualbox sshfs]]" modified="20210831181025075" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13208,7 +13228,7 @@ pass: 141410
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210831175928727" creator="zeid" modified="20210831180105880" modifier="zeid" tags="virtualbox ssh mount linux" title="Virtualbox sshfs">
+<div created="20210831175928727" creator="zeid" modified="20210831181041278" modifier="zeid" tags="virtualbox ssh mount" title="Virtualbox sshfs">
 <pre>`sudo sshfs -o allow_other root@192.168.1.73:/var/www/  /mnt/www`
 
 33Iguanas&lt;br /&gt;
