--- a/cafe.html
+++ b/cafe.html
@@ -12149,8 +12149,8 @@ Error message and password prompt
 <div created="20210830101055416" modified="20210831134702005" title="$:/state/tab2-1422432489">
 <pre>python</pre>
 </div>
-<div created="20210602141529428" creator="zeid" modified="20210831181009423" modifier="zeid" title="$:/state/tab2-2058192071">
-<pre>linux</pre>
+<div created="20210602141529428" creator="zeid" modified="20210901061652001" modifier="zeid" title="$:/state/tab2-2058192071">
+<pre>projects</pre>
 </div>
 <div created="20210603084225271" modified="20210831115831863" title="$:/state/tab2-678259293">
 <pre>Пак Звезда</pre>
@@ -12341,7 +12341,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831181018423" creator="zeid" list="Home [[Virtualbox sshfs]]" modified="20210831181025075" modifier="zeid" title="$:/StoryList">
+<div created="20210901061655272" creator="zeid" list="[[Криптосервис - задачи]] [[Криптосервис - api]] AppService Home Криптосервис crypto_service.ini" modified="20210901061915317" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12569,8 +12569,7 @@ Error message and password prompt
 &lt;/div&gt;</pre>
 </div>
 <div created="20210831145632192" creator="zeid" modified="20210831145651750" modifier="zeid" tags="zdl" title="app_feedback.zdl">
-<pre>
-```properties
+<pre>```properties
 # API, которое должно предоставляться криптосервису для отправки данных приложению. Через данное API расшифрованные данные передаются приложению.
 # Провайдером данного API является подсистема, которая обеспечивает взаимодействие криптосервиса с сервером прилоожения.
 # Для функционирования криптосервиса в составе криптосервера необходимо открыть соединение для обслуживания данного API.
@@ -13019,8 +13018,7 @@ file:///X:/Doc/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B/RiscV/NE32
 &lt;/div&gt;</pre>
 </div>
 <div created="20210831180116858" creator="zeid" modified="20210831180143847" modifier="zeid" tags="php" title="PHP - display errors">
-<pre>
-```php
+<pre>```php
 ini_set('display_errors', '1');
 ini_set('display_startup_errors', '1');
 error_reporting(E_ALL);
@@ -13361,8 +13359,12 @@ jcr2297215</pre>
 
 </pre>
 </div>
-<div created="20210831143909705" creator="zeid" modified="20210831143912065" modifier="zeid" tags="Криптосервис" title="Криптосервис - api">
-<pre></pre>
+<div created="20210831143909705" creator="zeid" modified="20210901061923874" modifier="zeid" tags="Криптосервис" title="Криптосервис - api">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Криптосервис - api'&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20210831130316573" modified="20210831130724005" tags="php handshake Криптосервис" title="Криптосервис - handshake &amp; login">
 <pre>```php
@@ -13623,8 +13625,7 @@ List&lt;Position&gt; positions = getDocumentManagedPositions().get(category);
 </pre>
 </div>
 <div created="20210831180822649" creator="zeid" modified="20210831180901951" modifier="zeid" tags="bash" title="Рекурсивная замена в названиях файлов">
-<pre>
-```bash
+<pre>```bash
 for i in `find . -name '*smfaq*'`; do mv &quot;${i}&quot; &quot;${i/smfaq/scanswers}&quot;; done
 
 Рекурсивная замена в содержимом
