--- a/cafe.html
+++ b/cafe.html
@@ -557,6 +557,8 @@ Error message and password prompt
 
 <li>спецификация</li>
 
+<li>Тестовые сообщения - receiveMsg и receiveData</li>
+
 <li>Установка Msgpack для php под Lamp debian в virtualbox</li>
 
 <li>Чтение данных с eDocViewer</li>
@@ -12341,7 +12343,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210901061655272" creator="zeid" list="[[Криптосервис - задачи]] AppFeedback AppService Home Криптосервис crypto_service.ini" modified="20210901061928893" modifier="zeid" title="$:/StoryList">
+<div list="[[Тестовые сообщения - receiveMsg и receiveData]] Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13670,6 +13672,47 @@ for i in `find . -name '*Image*'`; do mv &quot;${i}&quot; &quot;${i/Image/image}
 &lt;&lt;toc-selective-expandable 'спецификация'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20210901115354132" creator="zeid" modified="20210901115652995" modifier="zeid" tags="info Криптосервис" title="Тестовые сообщения - receiveMsg и receiveData">
+<pre>Сообщения нужно передавать в функцию ReceiveMsg из RadioService API. 
+Данные в открытом виде будут переданы в функцию ReceiveData из AppFeedback API 
+
+Сообщения отправлять на криптосервис повторно можно, но криптосервис будет отвечать ошибками: 
+
+* «Ошибка протокола crisp (ClientID=1): Перепосылка возможна только в сихронной сессии клиента» 
+* «Ошибка протокола crisp (ClientID=2): Лимит перепосылок сообщений синхронной сессии исчерпан». 
+
+Их можно игнорировать.
+
+---
+
+    1) Без подтверждения (ответных сообщений от криптосервиса нет) от клиента с ClientID = 1. 
+
+
+```
+00 00 81 85 01 00 00 00 01 00 00 00 00 00 01 80 3D BC B8 47 FB B3 FF
+00 00 81 85 01 00 00 00 01 00 00 00 00 00 02 80 28 04 D7 AD F3 7F 82
+00 00 81 85 01 00 00 00 01 00 00 00 00 00 03 80 95 F7 2E 8A B5 15 62
+00 00 81 85 01 00 00 00 01 00 00 00 00 00 04 80 04 B6 E4 93 C8 36 4D
+00 00 81 85 01 00 00 00 01 00 00 00 00 00 05 80 4C AB 94 42 1A AF 50
+```
+
+
+    2) С подтверждением (ожидаются сообщения от криптосервиса) от клиента с 
+ClientID = 2. 
+
+
+```
+От клиента: 00 00 81 85 01 00 00 00 02 00 00 00 00 00 01 84 3C 0D 52 EC C4 EE F5
+От сервера: 00 00 82 85 01 00 00 00 02 00 00 01 00 00 01 01 00 96 0C 27 46
+
+От клиента: 00 00 81 85 01 00 00 00 02 00 00 01 00 00 02 84 01 B2 03 9E 3A D6 B5
+От сервера: 00 00 82 85 01 00 00 00 02 00 00 02 00 00 02 01 00 46 67 A6 1E
+
+От клиента: 00 00 81 85 01 00 00 00 02 00 00 02 00 00 03 84 11 7A E3 1A A9 E7 FA
+От сервера: 00 00 82 85 01 00 00 00 02 00 00 03 00 00 03 01 00 6C 03 58 81
+```
+</pre>
 </div>
 <div created="20210830100842186" modified="20210831130301251" tags="php msgpack linux virtualbox" title="Установка Msgpack для php под Lamp debian в virtualbox">
 <pre>Установка [[msgpack]] для [[php]]
