--- a/cafe.html
+++ b/cafe.html
@@ -493,6 +493,8 @@ Error message and password prompt
 
 <li>radio_service.zdl</li>
 
+<li>RadioService</li>
+
 <li>Sigma-3</li>
 
 <li>task</li>
@@ -12345,7 +12347,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210901115720273" creator="zeid" list="radio_service.zdl [[Тестовые сообщения - receiveMsg и receiveData]] RadioService AppFeedback Home" modified="20210901120849878" modifier="zeid" title="$:/StoryList">
+<div created="20210901115720273" creator="zeid" list="[[Тестовые сообщения - receiveMsg и receiveData]] RadioService AppFeedback Home" modified="20210901120849878" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13211,6 +13213,20 @@ End
 
 ```
 </pre>
+</div>
+<div created="20210901120930074" creator="zeid" modified="20210901121012584" modifier="zeid" title="RadioService">
+<pre>Из radio_service.h:
+
+```h
+enum class Functions { 
+	ReceiveMsg = 1, 
+};
+```
+
+
+[[radio_service.zdl]]
+
+{{radio_service.zdl}}</pre>
 </div>
 <div created="20210601151030581" creator="zeid" modified="20210831143107024" modifier="zeid" tags="разное" title="Sigma-3">
 <pre>* 25.02 
